# WorkHive

./: README.md  prompt.txt
WebClient/: README.md  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  route.ts  tsconfig.json
WebClient/drizzle/: 0000_cooing_ronan.sql  0001_funny_marvel_zombies.sql  0002_jazzy_nebula.sql  0003_salty_pandemic.sql  0004_milky_zarda.sql  0005_good_kabuki.sql
WebClient/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
WebClient/prisma/: dev.db  schema.prisma
WebClient/remaining-codebase/JoinedOrganiation/: useJoinedOrganization.tsx
WebClient/src/@types/: AuthToken.ts  Notification.ts  Task.ts  (+2 more)
client/: package-lock.json  package.json  tsconfig.app.json
client/src/: App.tsx  index.css  main.tsx
combine/: README.md  package-lock.json  package.json
combine/prisma/: schema.prisma
guides/: features-to-be-implemented.md  notes.md  prisma.md  sql-queries.md
migrations/20250804083506_init/: migration.sql
migrations/20250804120132_added_stripe_ids/: migration.sql
migrations/20250805082248_added_unique_flag/: migration.sql
migrations/20250814173442_added_tasks_column/: migration.sql
server/: .gitignore  main.py  pyproject.toml
server/database/: __init__.py  main.py  pool.py
server/prisma/: schema.prisma
server/prisma/database/: database.db
server/routes/: __init__.py  create_organization.py  login.py
server/schemas/: __init__.py  login.py  organization.py
(+341 files in other folders)
